crates/ink/tests/ui/contract/fail/constructor-missing-return.stderr
error: missing return for ink! constructor
 --> tests/ui/contract/fail/constructor-missing-return.rs:8:13
  |
8 |         pub fn constructor() {}
  |             ^^^^^^^^^^^^^^^^
